--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,11 @@
-<p>
-  dashboard works!
-</p>
+
+<div class="container">
+  <app-navbar></app-navbar>
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <h2>Welcome to SRH Hochshule Heidelberg - Sports Club</h2>
+    <p>Booking Dashboard </p>
+    <!-- <scheduler></scheduler> -->
+   </div>
+  
+</div> <!-- /container -->
