--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,8 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="buton" class="btn btn-primary btn-block" (click)="signInWithEmail()" [disabled]="formCtrl.form.invalid">
+                        <!-- <button type="buton" class="btn btn-primary btn-block" (click)="signInWithEmail()" [disabled]="formCtrl.form.invalid"> -->
+                            <button type="buton" class="btn btn-primary btn-block" (click)="signInWithEmail()">
                           Login with SRH Email
                         </button>
                         <button type="buton" class="btn btn-reset btn-primary btn-block text-danger" (click)="sendResetEmail()">
