--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   <div class="jumbotron">
     <h2>Welcome to SRH Hochshule Heidelberg - Sports Club</h2>
     <p>Booking Dashboard </p>
-    <!-- <scheduler></scheduler> -->
+    <scheduler></scheduler>
    </div>
   
 </div> <!-- /container -->
