--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -13,9 +13,11 @@
         </div>
 
         <div class="userInput" style="width: 300px;">
-          <input matInput [matDatepicker] = "picker" placeholder="Choose a Date">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
+          <mat-form-field>
+            <input matInput [min] = "minDate" [max] = "maxDate" [matDatepicker] = "picker" placeholder="Choose a Date" [formControl]="mDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field> 
         </div>
 
         <div style="width: 300px;">
