--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -14,7 +14,12 @@
 
         <div class="userInput" style="width: 300px;">
           <mat-form-field>
-              <input matInput #dateInput [min] = "minDate" [max] = "maxDate" [matDatepicker] = "picker" placeholder="Choose a Date" (dateInput)="orgValueChane(ref.value)">
+              <input matInput #dateInput 
+              [min] = "minDate" 
+              [max] = "maxDate" 
+              [matDatepicker] = "picker" 
+              placeholder="Choose a Date"
+               (dateInput)="enableTimeSelect">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
