--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
+  <app-navtabs></app-navtabs>
   <div class="jumbotron" style="margin:0 auto">
 
       <h2 align=left style="padding-left:16px">
