--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 
 <div class="container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
+  <app-navtabs></app-navtabs>
   <!-- Main component for a primary marketing message or call to action -->
   <div class="jumbotron">
     <h2>Welcome to SRH Hochshule Heidelberg - Sports Club</h2>
