--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,6 +1,7 @@
 
 
-        <app-navbar></app-navbar>
+        <!-- <app-navbar></app-navbar> -->
+        <app-navtabs></app-navtabs>
    
         <div class="row">
         
