--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
+  <app-navtabs></app-navtabs>
   <div class="jumbotron">
     <div style="display: flex; justify-content: center;"><img src="assets/images/sports.jpg"></div>
     <h2>Our Range</h2>
@@ -20,3 +21,4 @@
   
   
   </div>
+</div>
